<resources>
    <string name="app_name">微信红包插件</string>
    <string name="setting_name">高级配置</string>

    <string name="step_one_get_we_chat_version_error">读取微信版本失败, 请联系开发人员！ (WeChat: pursuit_of_720)</string>
    <string name="step_one_get_we_chat_error">插件检测不到微信软件, 请安装微信！</string>
    <string name="step_one_cant_support_chat_version_error">请安装或者升级微信到对应支持的版本！(7.0.0/7.0.3/7.0.10)</string>




    <string name="accessibility_service_interrupt">插件服务被中断</string>
    <string name="accessibility_service_connected">插件服务已连接</string>

    <string name="setting_open_action">前往开启</string>
    <string name="setting_get_action">前往获取</string>
    <string name="setting_get_user_name_question">特别说明: 该数据用于识别聊天会话中红包是否是自己发送的，插件把该数据当作使用者微信昵称。 \n 点击下方【前往获取】按钮跳转微信，停留在 \"首页-我 Tab\" 后自动获取微信昵称，如下图所示切换到 \"我\"。\n 若存在已有读取数据，则可以点击【使用该昵称】按钮完成配置。</string>
    <string name="setting_get_user_name_by_history">已有昵称: %1$s</string>
    <string name="setting_get_user_name_by_history_btn">使用该昵称</string>
    <string name="setting_get_user_name_question_title">[微信昵称读取]</string>
    <string name="setting_get_accessibility">点击下方【前往开启】按钮到插件管理页面，进入 \"微信红包插件\" 配置页面操作，如下图所示。</string>
    <string name="setting_get_accessibility_title">[插件权限获取]</string>
    <string name="plugin_running_status_open">插件运行中,可在设置中暂停</string>
    <string name="plugin_running_status_close">插件已暂停,可在设置中重启</string>
    <string name="setting_to_stop_action">是否运行插件</string>
    <string name="setting_to_float_btn_open">是否打开悬浮窗</string>
    <string name="setting_get_self_tip">是否抢自己发送的红包</string>
    <string name="setting_filter_conversation">是否过滤特定会话</string>
    <string name="setting_filter_tip">是否过滤特定关键字红包</string>
    <string name="setting_delay_tip">延迟抢红包服务</string>

    <string name="float_tag">float_tag</string>
    <string name="float_running_choose">运行插件</string>
    <string name="float_get_self_choose">抢自己红包</string>
    <string name="float_filter_conversation_choose">过滤会话</string>
    <string name="float_filter_packet_choose">过滤红包</string>
    <string name="float_more">更多设置</string>

    <string name="delay_type">延迟类型</string>
    <string name="delay_fixation_message">固定延迟毫秒数</string>
    <string name="delay_random_message">最大随机毫秒数(区间内随机延迟)</string>
    <string name="delay_edit">提交</string>
    <string name="delay_back">撤销</string>
    <string name="delay_none">无延迟</string>
    <string name="delay_fixation">固定延迟</string>
    <string name="delay_random">随机延迟</string>
    <string name="filter_commit">添加过滤</string>
    <string name="tag_empty_tip">请输入过滤内容</string>
    <string name="add_tag_tip">请添加过滤内容</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>


    <string name="app_description">By Yummylau</string>
    <string name="service_accessibility">微信红包插件</string>
    <string name="service_lable2">红包通知栏服务</string>
    <string name="main_activity_descr">
        注意：\n
        1、请把模拟操作和通知监听的权限打开。\n
        2、请取消锁屏密码。\n
        3、为了使服务可以持续在后台运行：\n
        （1）请设置本应用开机自启。\n
        （2）按菜单键，在弹出的后台程序管理窗口中给本应用加锁。\n
        4、在某些机型上，偶尔会出现卡在最后拆开红包界面的现象，请等待后续版本更新。\n
    </string>

    <style name="easy_dialog_style" parent="@android:style/Theme.Dialog">
        <item name="android:windowFrame">@null</item>
        <!-- 边框 -->
        <item name="android:windowIsFloating">true</item>
        <!-- 是否浮现在activity之上 -->
        <item name="android:windowIsTranslucent">true</item>
        <!-- 半透明 -->
        <item name="android:windowNoTitle">true</item>
        <!-- 无标题 -->
        <item name="android:windowBackground">@android:color/transparent</item>
        <!-- 背景透明 -->
        <item name="android:backgroundDimEnabled">true</item>
        <!-- 后面的activity变暗 -->
    </style>
</resources>
