<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sh_page_get_wx_nick"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/setting_get_user_name_question_title"
        android:textColor="@color/colorThemeText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/tipContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/historyLayout"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/setting_get_user_name_question"
                android:textColor="@color/colorThemeText"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/imageTip"
                android:layout_width="180dp"
                android:layout_height="231dp"
                android:layout_below="@+id/tip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_step_two" />

        </RelativeLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/historyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/getUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/historyNameTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_get_user_name_by_history"
            android:textColor="@color/colorThemeText"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/useHistoryName"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/se_white_btn"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/setting_get_user_name_by_history_btn"
            android:textColor="@color/se_white_btn_color"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/getUserName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/se_white_btn"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/setting_get_action"
        android:textColor="@color/se_white_btn_color"
        android:textSize="25sp" />

</RelativeLayout>