<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/floatEntrance"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/sh_float_entrance">

        <View
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_float_app" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/floatContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_float_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/chooseContentBack"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_float_content_back" />

        <RelativeLayout
            android:id="@+id/runningChoose"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/float_running_choose"
                android:textColor="@color/colorThemeText"
                android:textSize="20sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:background="@drawable/se_setting" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/getSelfChoose"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/float_get_self_choose"
                android:textColor="@color/colorThemeText"
                android:textSize="20sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:background="@drawable/se_setting" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/filterConversationChoose"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/float_filter_conversation_choose"
                android:textColor="@color/colorThemeText"
                android:textSize="20sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:background="@drawable/se_setting" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/filterPacketChoose"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/float_filter_packet_choose"
                android:textColor="@color/colorThemeText"
                android:textSize="20sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:background="@drawable/se_setting" />
        </RelativeLayout>


        <TextView
            android:id="@+id/more"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/sh_float_more_action"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/float_more"
            android:textColor="@color/colorThemeText"
            android:textSize="15sp" />

    </LinearLayout>


</RelativeLayout>